# kde1-kdegraphics

./: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.cvs  acconfig.h  acinclude.m4.in  automoc.in  config.h.bot  configure.in.1  configure.in.in  findperl  kdegraphics.spec
bsd-port/: Makefile
debian/: changelog  control  copyright  (+3 more)
doc/kfract/: Makefile.am
kfax/: .cvsignore  ChangeLog  KFax.kdelnk  Makefile.am  Makefile.in  README  TODO  about.cpp  about.h  fax-g3.kdelnk  fax2ps.c  fax2tiff.c  faxinput.c  faxinput.cpp  g3hack.c  kfax.cpp  kfax.h  kfax.xpm  kfaxlogo.xpm  mini-kfax.xpm  options.cpp  options.h  print.cpp  print.h  tiff2ps.c  urldlg.cpp  urldlg.h  version.h  viewfax.cpp  zoomin.xpm  zoomout.xpm
kfax/docs/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-4.html  index-5.html  index-6.html  index.html  kfax-0.2.2.lsm  kfax-1.html  kfax-2.html  kfax-3.html  kfax-4.html  kfax-6.html  kfax.html  kfax.sgml
kfax/examples/: README  README.kdeapps  kde.g32d  kde.g4
kfax/libtiffax/: .cvsignore  Makefile.am  Makefile.in  README  mkg3states.c  mkspans.c  mkversion.c  port.h  t4.h  tif_apple.c  tif_atari.c  tif_aux.c  tif_close.c  tif_codec.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jpeg.c  tif_lzw.c  tif_msdos.c  tif_next.c  tif_open.c  tif_packbits.c  tif_predict.c  tif_predict.h  tif_print.c  tif_read.c  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  (+13 more)
kfract/: .cvsignore  CMakeLists.txt  ChangeLog  Fractal.kdelnk  Makefile.am  Makefile.in  drawview.C  fract.C  kfract.C  kfract.h  kfract.kdelnk  kfract.xpm  kfractdlgs.C  mini-kfract.xpm
kghostview/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  README  TODO  copyright.cpp  goto.cpp  goto.h  info.cpp  interpreter.cpp  interpreter.h  kaccel.cpp  kaccel.h  kghostview.cpp  kghostview.h  kghostview.kdelnk  kghostview.lsm  kghostview.xpm  kglobalaccel.cpp  kglobalaccel.h  kkeydialog.cpp  kkeydialog.h  kpswidget.cpp  kpswidget.h  kpushbt.cpp  kpushbt.h  main.cpp  main.h  marklist.cpp  marklist.h  messages.cpp  messages.h  mini-kghostview.xpm  print.cpp  print.h  ps.c  ps.h  version.h  viewcontrol.cpp  (+3 more)
kghostview/apps/Graphics/: KGhostview.kdelnk
kghostview/config/: Makefile  Makefile.am  global.cpp  global.h  kaccel.cpp  kaccel.h  kcmkeys.cpp  kcmkeys.h  kglobalaccel.cpp  kglobalaccel.h  kkeydialog.cpp  kkeydialog.h  main.cpp
kghostview/doc/: Makefile.in  index-3.html  index-5.html  index-6.html  kghostview-1.html  kghostview-2.html  kghostview-3.html  kghostview-4.html  kghostview-5.html  kghostview-6.html  kghostview.html  kghostview.ps  kghostview.sgml
kghostview/doc/en/: Makefile.am  index-1.html  index-2.html
kiconedit/: .cvsignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  NEWS  debug.cpp  debug.h  jpeg.cpp  kcolorgrid.cpp  kcolorgrid.h  kdragsource.cpp  kdragsource.h  kdropsite.cpp  kdropsite.h  kicon.cpp  kicon.h  kiconcolors.cpp  kiconcombiview.cpp  kiconconfig.cpp  kiconconfig.h  kicondetaillist.cpp  kicondetaillist.h  kiconedit.cpp  kiconedit.h  kiconedit.kdelnk  kiconeditslots.cpp  kiconfilebase.cpp  kiconfiledlg.cpp  kiconfiledlg.h  kiconfileview.cpp  kiconfileview.h  kicongrid.cpp  kicongrid.h  kicontools.cpp  kicontools.h  kresize.cpp  kresize.h  main.cpp  main.h  (+5 more)
kiconedit/Attic/: .cvsignore  Makefile.am  NEWS  kcolorgrid.cpp  kicon.cpp  kiconcolors.h  kiconconfig.cpp  kiconconfig.h  kiconedit.cpp  kiconedit.h  kiconeditslots.cpp  kicongrid.cpp  kicongrid.h  knew.cpp  knew.h  kresize.cpp  properties.cpp  properties.h  utils.cpp  utils.h  version.h
kiconedit/doc/: .cvsignore  Makefile.in
kiconedit/doc/da/: Makefile.am  Makefile.in
kiconedit/doc/en/: Makefile.in
kiconedit/pics/: CMakeLists.txt  Makefile.am  Makefile.in  kiconedit.xpm  logo.xpm
kiconedit/pics/icons/: .cvsignore  CMakeLists.txt  Makefile.in  mini-folder.xpm
kiconedit/pics/mini/: Makefile.in  kiconedit.xpm
kiconedit/pics/toolbar/: CMakeLists.txt  Makefile.in  areaselect.xpm  fileclose.xpm  flood.xpm  grayscale.xpm  kdepalette.xpm  line.xpm  newwin.xpm  selectcircle.xpm  spraycan.xpm  transform.xpm
kiconedit/pics/toolbar/Attic/: Makefile.am
kpaint/: .cvsignore  BUGS  CHANGES  CMakeLists.txt  INSTALL  KStatusbar.cpp  KToolbar.cpp  KToolbar.h  KTopWidget.cpp  KTopWidget.h  Makefile  Makefile.am  Makefile.in  PLANS  Paint.kdelnk  QwViewport.cpp  README  TODO  Untitled  app.cpp  app.h  areaselect.cpp  areaselect.h  canvas.cpp  canvas.h  canvassize.cpp  canvassize.h  circle.cpp  circle.h  colorbar.cpp  colorbar.h  commands.h  depthdialog.cpp  depthdialog.h  ellipse.cpp  ellipse.h  formatdialog.cpp  formatdialog.h  formats.cpp  formats.h  (+37 more)
kpaint/doc/: Makefile.am  Makefile.in  README.ktoolbar-newlook  README.kwidget  index.html  kpaint-0.1.lsm
kpaint/doc/HTML/: kpaint.html
kpaint/images/: .cvsignore
kpaint/toolpics/: CMakeLists.txt  Makefile.am  Makefile.in
ksnapshot/: .cvsignore  CMakeLists.txt  ksnapshot.cpp  ksnapshot.kdelnk  preview.cpp
kview/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  Makefile.swp  QwViewport.cpp  README  bagconst.cpp  baglayout.cpp  canvas.cpp  canvas.h  colour.cpp  colour.h  confighandler.cpp  confighandler.h  eps.cpp  eps.h  fileman.cpp  fileman.h  filter.cpp  filter.h  filtlist.cpp  filtlist.h  filtmenu.cpp  filtmenu.h  formats.cpp  formats.h  gif.cpp  ilistdlg.cpp  ilistdlg.h  image_bmp.h  jpeg.cpp  kaccelmenuwatch.cpp  kaccelmenuwatch.h  kcproc.cpp  kcproc.h  kerror.cpp  kerror.h  khelpidx.cpp  (+27 more)
kview/doc/: Makefile.am  Makefile.in  classHeader.inc  hierHeader.inc  index.html  indexHeader.inc  kview.html  toolbar1.xpm  toolbar2.xpm
kview/doc/en/: kview-1.html  kview.html  kview.lyx  kview.sgml
kview/kimgio/: Makefile.am  README  eps.cpp  jpeg.cpp  jpeg.h  kimgio.cpp  tiffr.cpp  tiffr.h  xview.cpp  xview.h
kview/layout/: .cvsignore  Makefile.am  bagconst.h  baglayout.cpp  baglayout.h  typolayout.cpp  typolayout.h
kview/pics/: Makefile.am  Makefile.in  diashow.xpm  random.xpm  resize.xpm
(+225 files in other folders)
