install(FILES
        circle.xpm
        areaselect.xpm
        line.xpm
        pen.xpm
        spraycan.xpm
        ellipse.xpm
        rectangle.xpm
        roundangle.xpm
    DESTINATION "${KDE1_TOOLBARDIR}")

# Installed by kdelibs
#install_icon(editpaste.xpm "${KDE1_TOOLBARDIR}")
#install_icon(filenew.xpm "${KDE1_TOOLBARDIR}")
#install_icon(editcopy.xpm "${KDE1_TOOLBARDIR}")
#install_icon(fileopen.xpm "${KDE1_TOOLBARDIR}")
#install_icon(editcut.xpm "${KDE1_TOOLBARDIR}")
#install_icon(filefloppy.xpm "${KDE1_TOOLBARDIR}")
#install_icon(viewmag+.xpm "${KDE1_TOOLBARDIR}")
#install_icon(viewmag-.xpm"${KDE1_TOOLBARDIR}")
